# cocotb-wrapper

./: .buildinfo  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  CHANGELOG.md  LICENSE  README.md  flake.nix  genindex.html  index.html  justfile  objects.inv  pyproject.toml  release.html  requirements.txt  search.html  searchindex.js  tox.ini  treefmt.nix
.doctrees/: environment.pickle  index.doctree  release.doctree
.doctrees/dev/: index.doctree  setup.doctree  todo.doctree
.doctrees/reference/: axi.doctree  index.doctree  testbench.doctree
.doctrees/user/: index.doctree  quickstart.doctree
.github/workflows/: check.yml  doc.yml  lint.yml  pages.yml
_modules/: index.html
_modules/cocotb_wrapper/: axi.html  testbench.html
_sources/: index.rst.txt  release.rst.txt
_sources/reference/: axi.rst.txt  index.rst.txt  testbench.rst.txt
_sources/user/: quickstart.rst.txt
cocotb_wrapper/: __init__.py  axi.py  check.py  cli.py  clock.py  cocotb_ext.py  const.py  convert.py  crc.py  log.py  models.py  package_handle.py  scheduler.py  template.py  testbench.py  timer.py
cocotb_wrapper/template/pytest/: conftest.py
cocotb_wrapper/template/test_bench/: test.py  test_bench.py
cocotb_wrapper/template/test_bench/do/: setupgui.do
dev/: index.html  setup.html  todo.html
docs/: conf.py  requirements.txt
docs/_templates/autosummary/: class.rst
docs/dev/: index.rst  setup.rst  todo.rst
docs/user/: index.rst
reference/: axi.html  index.html  testbench.html
tests/: pytest.ini
tests/source/: core_zsync_prbs.vhd  data_clk_recovery.vhd  dummy.vhd  prbs_check.vhd  prbs_test.vhd  test.vhd
tests/source/pkg/: const_pkg.vhd  type_pkg.vhd
tests/source/shared/: block_buffer.vhd  crc5_gen.vhd  edge_detector.vhd  moving_average.vhd
tests/test_benches/block_buffer/: const.py  models.py  test.py  test_bench.py
tests/test_benches/block_buffer/do/: wave.do
tests/test_benches/prbs_test/: test.py  test_bench.py
tests/test_benches/prbs_test/do/: wave.do
typings/cocotb/: ANSI.pyi  __init__.pyi  _deprecation.pyi  _py_compat.pyi  _sim_versions.pyi  binary.pyi  clock.pyi  config.pyi  decorators.pyi  handle.pyi  ipython_support.pyi  log.pyi  memdebug.pyi  outcomes.pyi  queue.pyi  regression.pyi  result.pyi  runner.pyi  scheduler.pyi  task.pyi  triggers.pyi  utils.pyi  wavedrom.pyi  xunit_reporter.pyi
typings/cocotb/_vendor/: distutils_version.pyi
typings/cocotb/types/: __init__.pyi  array.pyi  logic.pyi  logic_array.pyi  range.pyi
typings/cocotb_bus/: bus.pyi  scoreboard.pyi
typings/cocotb_bus/drivers/: __init__.pyi
typings/cocotb_bus/monitors/: __init__.pyi
typings/cocotbext/axi/: __init__.pyi  address_space.pyi  axi_channels.pyi  axi_master.pyi  axi_ram.pyi  axi_slave.pyi  axil_channels.pyi  axil_master.pyi  axil_ram.pyi  axil_slave.pyi  axis.pyi  buddy_allocator.pyi  constants.pyi  memory.pyi  reset.pyi  sparse_memory.pyi  stream.pyi  utils.pyi
user/: index.html  quickstart.html
